--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fuchuang?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=Wkj161001.
+#spring.datasource.password=fuchuangasdfghjklfuchuang
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 mybatis.typeAliasesPackage=com.example.fu_chuang14.pojo
 mybatis.mapperLocations=classpath:mapper/*.xml
 logging.level.com.shizhao.project.springdemo=DEBUG
 server.port=8080
+#server.port=306
+#server.address=0.0.0.0
